<resources>
    <string name="app_name">Smart Telescope</string>
    <string name="hint_pitch">Pitch (degrees)</string>
    <string name="hint_roll">Roll (degrees)</string>
    <string name="hint_yaw">Yaw (degrees)</string>
    <string name="hint_latitude">Latitude (degrees)</string>
    <string name="hint_longitude">Longitude (degrees)</string>
    <string name="button_text">Calculate and Query</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Received:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="app_description">Tailor your stargazing adventure based on your preferences and location. Uncover hidden gems in the night sky and witness the awe-inspiring beauty of celestial objects, all with the guidance of our app</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>

    <string name="message">Message to send</string>
    <string name="send">Send</string>

    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="exit">EXIT App</string>
</resources>