<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Input fields for pitch, roll, yaw, latitude, and longitude -->
    <TextView
        android:id="@+id/pitchInput"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="200dp"
        android:autofillHints="number"
        android:hint="@string/hint_pitch"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/pitchHint"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/hint_pitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rollInput"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="200dp"
        android:autofillHints="number"
        android:hint="@string/hint_roll"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pitchInput" />
    <TextView
        android:id="@+id/rollHint"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:inputType="number"
        android:text="@string/hint_roll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pitchHint" />

    <TextView
        android:id="@+id/yawInput"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="200dp"
        android:autofillHints="number"
        android:hint="@string/hint_yaw"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rollInput" />
    <TextView
        android:id="@+id/yawHint"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:autofillHints="number"
        android:text="@string/hint_yaw"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rollHint" />

    <TextView
        android:id="@+id/latitudeInput"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="200dp"
        android:autofillHints="number"
        android:hint="@string/hint_latitude"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yawInput" />
    <TextView
        android:id="@+id/latitudehint"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:autofillHints="number"
        android:text="@string/hint_latitude"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yawHint" />

    <TextView
        android:id="@+id/longitudeInput"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="200dp"
        android:autofillHints="number"
        android:hint="@string/hint_longitude"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/latitudeInput" />
    <TextView
        android:id="@+id/longitudeHint"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:autofillHints="number"
        android:text="@string/hint_longitude"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/latitudehint" />

    <!-- Button to trigger the calculation and query -->

    <!-- Text view to display the results -->

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="#4F347E"
        app:layout_constraintTop_toBottomOf="@+id/longitudeInput" />

    <TextView
        android:id="@+id/resultText"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculateButton" />

    <Spinner
        android:id="@+id/objectSpinner"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:entries="@array/objects_array"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultText" />

    <Button
        android:id="@+id/previousButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="356dp"
        android:text="Previous"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="#4F347E"
        app:layout_constraintTop_toBottomOf="@+id/calculateButton" />



</androidx.constraintlayout.widget.ConstraintLayout>
